# QStudioMetrics

./: .README.md.swp  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  ChangeLog.md  ChangeLog.txt  Contributors.md  LICENSE  QStudioMetrics.kdev4  README.md  REFERENCES.md  TODO  qstudiometrics.spec  sonar-project.properties
.github/workflows/: codeql.yml  sonarqube.yml
.kdev4/: QStudioMetrics.kdev4
build_osx/: CMakeCache.txt  Makefile  cmake_install.cmake
build_osx/src/: Makefile  cmake_install.cmake  moc_DATAIO.cpp_parameters  moc_ListView.cpp  moc_ListView.cpp_parameters  moc_MDIChild.cpp  moc_MDIChild.cpp_parameters  moc_MainWindow.cpp  moc_MainWindow.cpp_parameters  moc_ModelInfo.cpp  moc_ModelInfo.cpp_parameters  moc_Table.cpp  moc_Table.cpp_parameters  moc_VariableSelectionModel.cpp_parameters  moc_qsmdata.cpp_parameters  moc_qstudiometricsdataoperations.cpp_parameters  moc_run.cpp_parameters  qrc_icons.cpp  qsm-hgm  qsm-kmeans  qsm-mdc  qsm-mlr  qsm-pca  qsm-pls  qsmprojectcompressor  testimportarray  testimportdvector  testimportmatrix  testimportpcamodel  ui_AboutDialog.h  ui_AdvancedPretreatmentDialog.h  ui_BarPlot.h  ui_ClassDialog.h  ui_ClassModelDialog.h  ui_ClassPlotDialog.h  ui_DialogPlots.h  ui_DoClusterAnalysisDialog.h  ui_DoPredictionDialog.h  ui_ExportTableDialog.h  ui_ExtractDataDialog.h  (+29 more)
build_osx/src/Chart/: Makefile  cmake_install.cmake  moc_chart.cpp  moc_chart.cpp_parameters  moc_databar.cpp_parameters  moc_datacurve.cpp_parameters  moc_datapoint.cpp_parameters  moc_plotinfo.cpp_parameters  moc_qplotly.cpp  moc_qplotly.cpp_parameters  qrc_chart.cpp  testchart  testqplotly
build_osx/src/Dialogs/: moc_AboutDialog.cpp  moc_AboutDialog.cpp_parameters  moc_AdvancedPretreatmentDialog.cpp  moc_AdvancedPretreatmentDialog.cpp_parameters  moc_ClassDialog.cpp  moc_ClassDialog.cpp_parameters  moc_ClassModelDialog.cpp  moc_ClassModelDialog.cpp_parameters  moc_ClassPlotDialog.cpp  moc_ClassPlotDialog.cpp_parameters  (+56 more)
cmake_modules/: FindLibscientific.cmake  Findlibscientific.cmake
doc/source/: conf.py
docs/source/: Install.rst  Licensing.rst  conf.py  index.rst
examples/: wine.csv
src/: AboutDialog.cpp  AdvancedPretreatmentDialog.h  AdvancedPretreatmentDialog.ui  AxisScaleDialog.ui  BarPlot.cpp  BarPlot.h  CMakeLists.txt  CMakeLists0.txt  ClassDialog.cpp  ClassDialog.ui  ClassModelDialog.cpp  ClassModelDialog.h  ClassModelDialog.ui  ClassPlotDialog.cpp  ClassPlotDialog.h  ClusterModel.h  ConvertImageToRGB.cpp  DATAIO.cpp  DATAIO.h  DoClusterAnalysisDialog.cpp  DoClusterAnalysisDialog.h  DoClusterAnalysisDialog.ui  DoPredictionDialog.cpp  DoPredictionDialog.h  ExportTableDialog.cpp  ExportTableDialog.h  ExtractDataDialog.cpp  ExtractDataDialog.h  FindCorrelationWidget.cpp  FindCorrelationWidget.h  FindCorrelationWidget.ui  Found.txt  GenericProgressDialog.cpp  GenericProgressDialog.h  GenericProgressDialog.ui  HighlightTableVarDialog.cpp  HighlightTableVarDialog.h  Imagetable.cpp  Imagetable.h  ImportFileDialog.cpp  (+129 more)
src/CPCA/: CPCAPlot.cpp  CPCAPlot.h  cpcamodel.cpp  cpcamodel.h
src/Chart/: CMakeLists.txt  Chart.kdev4  INSTALL  README.md  chart.cpp  chart.h  chartqt.cpp  chartqt.h  cytoscape.min.js  databar.cpp  databar.h  datacurve.cpp  datacurve.h  datapoint.cpp  datapoint.h  graph.h  plotinfo.cpp  plotinfo.h  qplotly.cpp  qplotly.h  qtplot.cpp  qtplot.h  scatterplot.html  scatterplot2.html  scatterplot3.html  testchart.cpp  testchartqt.cpp  testpoints.txt  testpoints2.txt  testqplotly.cpp
src/Chart/.kdev4/: Chart.kdev4
src/Chart/deprecated/: CMakeLists.txt  qplotly.cpp  qplotly.h  testqplotly.cpp
src/Chart_old/: CMakeLists.txt  chart.cpp
src/Clustering/: ClusterModel.cpp  ClusterModel.h
src/Dialogs/: .ObjectSelectorDialog.h.swp  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AdvancedPretreatmentDialog.cpp  AdvancedPretreatmentDialog.h  AdvancedPretreatmentDialog.ui  ClassDialog.cpp  ClassDialog.h  ClassDialog.ui  ClassModelDialog.cpp  ClassModelDialog.h  ClassModelDialog.ui  ClassPlotDialog.cpp  ClassPlotDialog.h  ClassPlotDialog.ui  DialogPlots.cpp  DialogPlots.h  DialogPlots.ui  DoClusterAnalysisDialog.cpp  DoClusterAnalysisDialog.h  DoClusterAnalysisDialog.ui  DoPredictionDialog.cpp  DoPredictionDialog.h  DoPredictionDialog.ui  ExportTableDialog.cpp  ExportTableDialog.h  ExportTableDialog.ui  ExtractDataDialog.cpp  ExtractDataDialog.h  ExtractDataDialog.ui  FindCorrelationWidget.cpp  FindCorrelationWidget.h  FindCorrelationWidget.ui  GenericProgressDialog.cpp  GenericProgressDialog.h  GenericProgressDialog.ui  HighlightTableVarDialog.cpp  HighlightTableVarDialog.h  HighlightTableVarDialog.ui  (+70 more)
src/EPLS/: EPLSPlot.cpp  EPLSPlot.h  eplsmodel.cpp  eplsmodel.h
src/LDA/: LDAPlot.cpp  LDAPlot.h  ldamodel.cpp  ldamodel.h
src/Logo/: qsmlogo.xcf
src/MLR/: MLRPlot.cpp  MLRPlot.h  mlrmodel.cpp  mlrmodel.h
src/PCA/: PCAPlot.cpp  PCAPlot.h  pcamodel.cpp  pcamodel.h
src/PLS/: PLSPlot.cpp  PLSPlot.h  plsmodel.cpp  plsmodel.h
src/Plot2D/: CMakeLists.txt
src/Plotlib/: BarPlot.cpp  BarPlot.h  BarPlot.ui  ScatterPlot.cpp  ScatterPlot.h  ScatterPlot.ui  ScatterPlot2D.cpp  ScatterPlot2D.h  ScatterPlot2D.ui  ScatterPlot3D.cpp  ScatterPlot3D.h  ScatterPlot3D.ui  SimpleLine2DPlot.cpp  SimpleLine2DPlot.h  SimpleScatterPlot3D.cpp  SimpleScatterPlot3D.h  VariablePlot.cpp  VariablePlot.h
src/Plotter/: .directory  CMakeLists.txt.back  plotter.cpp
src/Plotter/.kdev4/: Plotter.kdev4
src/Plotter_back/: CMakeLists.txt  datacurve.cpp  datacurve.h  datapoint.cpp  plotter.cpp  plotter.h  plottertest.cpp
src/QChart/: CMakeLists.txt  datapoint.h  qchart.cpp  qchart.h  qchart.qrc  testqchart.cpp
src/QPlotly/: CMakeLists.txt  INSTALL  qplotly.cpp
src/QPlotly_old/: datapoint.cpp  datapoint.h  qplotly.cpp  qplotly.h  testqplotly.cpp
src/UPCA/: UPCAPlot.cpp  UPCAPlot.h  upcamodel.cpp  upcamodel.h
src/UPLS/: UPLSPlot.cpp  UPLSPlot.h  uplsmodel.cpp  uplsmodel.h
src/icons/: data.xcf  icons.qrc  lda.xcf  mlr.xcf  obj.xcf  pca.xcf  pls.xcf  qsmdmgbackground.xcf  qsmlogo.icns  var.xcf  varplot.xcf
vars/: Iconaqsm.xcf  QStudioMetrics.desktop
(+17 files in other folders)
